@@ -1,0 +1,6 @@
+procedure t is
+  ab  : constant integer := 1;
+  a__b : integer := 1;
+begin
+  a__b := ab;
+end t;
