@@ -63,7 +63,7 @@ CHANGES SINCE 2.4.1
 
 27. New: hashed_maps package.
 
-28. New: vectors package.[not complete, tests, docs needed]
+28. New: vectors package.
 
 29. New: case in statement can have multiple test variables and return expressions. [change into a relation function]
 
@@ -86,4 +86,6 @@ CHANGES SINCE 2.4.1
 38. New: Support for Raspian / Debian 11.1 (Bullseye) on Raspberry Pi.
 
 39. New: Support for YAML substitutions.
+
+40. Change: [Beader] identifiers must differ by more than underscores in formal scripts.
 
